fix countryDetail page layout bug

--- a/src/pages/CountryDetail/CountryDetail.scss
+++ b/src/pages/CountryDetail/CountryDetail.scss
@@ -42,7 +42,6 @@
         align-items: center;
         gap: 25px;
         width: 35vw;
-        height: 450px;
         padding: 17px 60px 45px;
         border-radius: 10px;
         color: #252525;
